--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.30.8",
-    "htmlparser2": "^10.0.0"
+    "htmlparser2": "^10.0.0",
+    "nanoid": "^5.1.5"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
