--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/list": "^2.0.8",
     "htmlparser2": "^10.0.0",
     "nanoid": "^5.1.5"
   },
