--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/header": "^2.8.8",
     "@editorjs/list": "^2.0.8",
+    "@editorjs/underline": "^1.2.1",
     "htmlparser2": "^10.0.0",
     "nanoid": "^5.1.5"
   },
