--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,20 +1,38 @@
-name: Publish Package
+name: Publish package
 
 on:
+  push:
+    # publish on version tags like v1.2.3
+    tags:
+      - 'v*.*.*'
   release:
-    types: [created]
+    types: [published]
 
 jobs:
   publish:
+    name: Publish to GitHub Packages
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '18'
           registry-url: 'https://npm.pkg.github.com/'
-      - run: npm install
-      - run: npm publish
+          scope: '@fsarch'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+
+      - name: Publish package
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
+          npm publish --registry https://npm.pkg.github.com/
 
