--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@fsarch/content-editor",
   "version": "0.0.1",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
